# ModelFramework

./: CMakeLists.txt  README.md  SharedPtr.h
core/: Model.cxx  Model.h  Model1D.cxx  Model1D.h  Model2D.cxx  Model2D.h  ModelAbsVar.cxx  ModelAbsVar.h  ModelAbsVarSet.cxx  ModelAbsVarSet.h  ModelPar.cxx  ModelPar.h  ModelParSet.cxx  ModelParSet.h  ModelParameterHandler.cxx  ModelParameterHandler.h  ModelStructs.h  ModelVar.cxx  ModelVar.h  ModelVarSet.cxx  ModelVarSet.h  Parametrization.cxx  Parametrization.h  ParametrizationModel.cxx  ParametrizationModel.h  ParametrizationProxy.cxx  ParametrizationProxy.h
data/: Data.cxx  Data.h  DataPointProxy.cxx  DataPointProxy.h  DataStructs.h
fit/: EstimatorOptions.cxx  EstimatorOptions.h  ModelControlParameter.h  ModelEstimator.cxx  ModelEstimator.h  ModelFitFacade.cxx  ModelFitFacade.h  ModelFitResult.cxx  ModelMinimizationControlParameter.cxx  ModelMinimizationControlParameter.h  ModelMinimizer.cxx  ModelMinimizer.h
models1d/: DoubleGaussianModel1D.cxx  DoubleGaussianModel1D.h  ExponentialModel1D.cxx  ExponentialModel1D.h  GaussianModel1D.cxx  GaussianModel1D.h  OpenGLDataModel1D.cxx  OpenGLDataModel1D.h  PolynomialModel1D.cxx  PolynomialModel1D.h  StepFunction1D.cxx  StepFunction1D.h
models2d/: BoxModel2D.cxx  BoxModel2D.h  DataModel2D.cxx  DataModel2D.h  GaussianModel2D.cxx  GaussianModel2D.h
operators1d/: AdditionModel1D.cxx  AdditionModel1D.h  ProductModel.cxx  ProductModel.h  ProductModel1D.cxx  ProductModel1D.h
operators2d/: NumericConvolutionModel2D.cxx  NumericConvolutionModel2D.h  ProductModel2D.cxx  (+3 more)
(+32 files in other folders)
